--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -1,6 +1,6 @@
 [DOCUMENTATION]
 ORG_NAME="cart of bills Inc."
-ORG_URL="https://mymistech.github.io/tzwl/"
+ORG_URL="http://tzwl.store"
 ORG_DESCRIPTION="trillion Zimbabwe dollars concept token"
 
 [[CURRENCIES]]
