--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -1,5 +1,5 @@
 [DOCUMENTATION]
-ORG_NAME="cart of bills Inc."
+ORG_NAME="mymistech Inc."
 ORG_URL="http://tzwl.store"
 ORG_DESCRIPTION="trillion Zimbabwe dollars concept token"
 
